Add annotation for BookController
