# schemas/Book.php
@@ -1,0 +1,13 @@
+/**
+ * @OA\Schema(
+ *     schema="Book",
+ *     title="Book",
+ *     description="Book entity",
+ *     @OA\Property(property="id", type="integer", example=1),
+ *     @OA\Property(property="title", type="string", example="voluptatem"),
+ *     @OA\Property(property="description", type="string", example="Tenetur est error aperiam esse. Vel et quia aut nisi debitis rerum culpa. Tempora dolores totam asperiores accusantium eos ut animi."),
+ *     @OA\Property(property="price", type="string", example="1500.00"),
+ *     @OA\Property(property="updated_at", type="string", example="2023-07-11T07:05:21.000000Z"),
+ *     @OA\Property(property="created_at", type="string", example="2023-07-11T07:05:21.000000Z"),
+ * )
+ */
